// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Surface Helper getStylePresetFromTheme interactive010 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #0A68C1;
  color: #FFFFFF;
}

.emotion-0 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-0:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-0:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #c0c0c0;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme interactive010 with borderRadius 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #0A68C1;
  color: #FFFFFF;
  border-radius: 100vw;
}

.emotion-0 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-0:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-0:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #c0c0c0;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme interactive010 with current state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #00ff00;
  color: #FFFFFF;
}

.emotion-0 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme interactive010 with disabled and loading state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FF0000;
  color: #c0c0c0;
}

.emotion-0 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme interactive010 with disabled state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FF0000;
  color: #c0c0c0;
}

.emotion-0 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme interactive010 with loading and current state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #ffff00;
  color: #FFFFFF;
}

.emotion-0 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme interactive010 with loading state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #ffff00;
  color: #FFFFFF;
}

.emotion-0 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme interactive010 without background-color styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #FFFFFF;
}

.emotion-0 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-0:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-0:disabled {
  color: #c0c0c0;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme interactive010 without disabled state styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #0A68C1;
  color: #FFFFFF;
}

.emotion-0 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-0:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-0:focus:not(:disabled) {
  border-width: 2px;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme with override to interactive020 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FF00FF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  color: #0A68C1;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:hover:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-0:active:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
